src/main/java/org/example/springjpaalena/error/InvalidPageException.java
package org.example.springjpaalena.error;

public class InvalidPageException extends RuntimeException {
    public InvalidPageException(String message) {
        super(message);
    }
}
